--- a/index.html
+++ b/index.html
@@ -41,21 +41,25 @@
     </main>
     <footer class="footer">
       <section class="footer__images">
-        <a class="footer__images__link" href=""
+        <a
+          class="footer__images__link"
+          href="https://www.instagram.com/milenaleonardi/"
           ><img
             class="footer__images__logo"
             src="./assets/instagram.png"
             alt="Instagram logo"
         /></a>
 
-        <a class="footer__images__link" href=""
+        <a class="footer__images__link" href="https://github.com/milenaleonardi"
           ><img
             class="footer__images__logo"
             src="./assets/linkedin.png"
             alt="Linkedin logo"
         /></a>
 
-        <a class="footer__images__link" href=""
+        <a
+          class="footer__images__link"
+          href="https://www.linkedin.com/in/milena-leonardi/"
           ><img
             class="footer__images__logo"
             src="./assets/github.png"
