html and css progress

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contato</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/contact.css" />
   </head>
   <body>
     <header class="header">
@@ -21,7 +21,74 @@
         <a class="header__menu__links" href="contact.html">Contato</a>
       </nav>
     </header>
-    <main></main>
+    <main class="main">
+      <h1 class="main__title">Contatos:</h1>
+      <section class="main__section">
+        <div class="icons-esquerda">
+          <div class="telefone">
+            <img
+              class="contact-icon"
+              src="./assets/whatsapp.png"
+              alt="Icon whatsapp"
+            />
+            <p>+55 (41) 99575-8523</p>
+          </div>
+          <div class="email">
+            <img
+              class="contact-icon"
+              src="./assets/o-email.png"
+              alt="Icon email"
+            />
+            <p>milena.leonardi@hotmail.com</p>
+          </div>
+          <div class="localidade">
+            <img
+              class="contact-icon"
+              src="./assets/localizacao.png"
+              alt="Icon localização"
+            />
+            <p>Curitiba - PR, Brasil</p>
+          </div>
+        </div>
+        <div class="icons-direita">
+          <div>
+            <a
+              class="linkedin"
+              href="https://www.linkedin.com/in/milena-leonardi/"
+              ><img
+                class="contact-icon"
+                src="./assets/linkedin.png"
+                alt="Icon linkedin"
+              />
+              <p>\in\milena-leonardi</p></a
+            >
+          </div>
+          <div>
+            <a class="github" href="https://github.com/milenaleonardi"
+              ><img
+                class="contact-icon"
+                src="./assets/github.png"
+                alt="Icon github"
+              />
+              <p>\milenaleonardi</p></a
+            >
+          </div>
+          <div>
+            <a
+              class="instagram"
+              href="https://www.instagram.com/milenaleonardi/"
+              ><img
+                class="contact-icon"
+                src="./assets/instagram.png"
+                alt="Icon instagram"
+              />
+              <p>\milenaleonardi</p></a
+            >
+          </div>
+        </div>
+      </section>
+      <h3 class="main__text">Obrigada por visitar meu portfolio!</h3>
+    </main>
     <footer class="footer">
       <section class="footer__images">
         <a
