--- a/projects.html
+++ b/projects.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meus projetos</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/projects.css" />
   </head>
   <body>
     <header class="header">
@@ -21,7 +21,40 @@
         <a class="header__menu__links" href="contact.html">Contato</a>
       </nav>
     </header>
-    <main></main>
+    <main class="main">
+      <h1 class="main__title">Meus projetos</h1>
+      <section class="main__section__primaria">
+        <div class="main__div">
+          <h2 class="main__section__title">Portifolio</h2>
+          <p class="main__section__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+            delectus suscipit minus recusandae? Voluptatem pariatur enim dolorem
+            quaerat dolor numquam laborum, sit unde necessitatibus! Porro
+            laudantium eligendi mollitia deserunt exercitationem. Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Earum delectus suscipit
+            minus recusandae? Voluptatem pariatur enim dolorem quaerat dolor
+            numquam laborum, sit unde necessitatibus! Porro laudantium eligendi
+            mollitia deserunt exercitationem.
+          </p>
+          <div class="link__button">
+            <a
+              href="https://portifolio-page-two.vercel.app/"
+              id="primeiro-botao"
+              >Acessar projeto</a
+            >
+            <a
+              href="https://github.com/milenaleonardi/portifolio-page"
+              id="segundo-botao"
+              >Acessar código</a
+            >
+          </div>
+        </div>
+        <img
+          src="./assets/primeiro-projeto.png"
+          alt="Thumbnail do primeiro projeto"
+        />
+      </section>
+    </main>
     <footer class="footer">
       <section class="footer__images">
         <a
