--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,36 @@
   </head>
   <body>
     <header class="header">
+      <nav class="mobile-nav">
+        <div class="header__menu__icons">
+          <input type="checkbox" id="menu" class="menu__botao" />
+          <label for="menu" class="menu__rotulo">
+            <span class="menu__imagem">
+              <img src="./assets/cardapio1.png" alt="" />
+            </span>
+          </label>
+          <ul class="lista-menu">
+            <li class="lista-menu__item">
+              <a class="lista-menu__link" href="./index.html">Home</a>
+            </li>
+            <li class="lista-menu__item">
+              <a class="lista-menu__link" href="./about.html">Sobre mim</a>
+            </li>
+            <li class="lista-menu__item">
+              <a class="lista-menu__link" href="./projects.html"
+                >Meus projetos</a
+              >
+            </li>
+            <li class="lista-menu__item">
+              <a class="lista-menu__link" href="./contact.html">Contato</a>
+            </li>
+          </ul>
+        </div>
+        <a class="icon-home" href="index.html"
+          ><img src="./assets/pagina-inicial.png" alt="Logo página inicial"
+        /></a>
+      </nav>
+
       <nav class="header__menu">
         <a class="header__menu__links" href="index.html">Home</a>
         <a class="header__menu__links" href="about.html">Sobre mim</a>
@@ -50,6 +80,7 @@
           </div>
         </div>
         <img
+          class="project-image"
           src="./assets/primeiro-projeto.png"
           alt="Thumbnail do primeiro projeto"
         />
