--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
   </head>
   <body>
     <header class="header">
+      <nav class="mobile-nav">
+        <div class="header__menu__icons">
+          <input type="checkbox" id="menu" class="menu__botao" />
+          <label for="menu" class="menu__rotulo">
+            <span class="menu__imagem">
+              <img src="./assets/cardapio1.png" alt="" />
+            </span>
+          </label>
+          <ul class="lista-menu">
+            <li class="lista-menu__item">
+              <a class="lista-menu__link" href="./index.html">Home</a>
+            </li>
+            <li class="lista-menu__item">
+              <a class="lista-menu__link" href="./about.html">Sobre mim</a>
+            </li>
+            <li class="lista-menu__item">
+              <a class="lista-menu__link" href="./projects.html"
+                >Meus projetos</a
+              >
+            </li>
+            <li class="lista-menu__item">
+              <a class="lista-menu__link" href="./contact.html">Contato</a>
+            </li>
+          </ul>
+        </div>
+        <a class="icon-home" href="index.html"
+          ><img src="./assets/pagina-inicial.png" alt="Logo página inicial"
+        /></a>
+      </nav>
+
       <nav class="header__menu">
         <a class="header__menu__links" href="index.html">Home</a>
         <a class="header__menu__links" href="about.html">Sobre mim</a>
@@ -22,22 +52,27 @@
       </nav>
     </header>
     <main class="main">
-      <section class="main__text">
-        <h1 class="main__text__title">Olá! Bem-vindo(a) ao meu portifolio!</h1>
-        <p class="main__text__paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nulla
-          explicabo facilis perferendis dicta nemo veritatis maiores magni eius
-          natus. Autem sit voluptates sequi ad fugit deleniti error! Quia, est.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nulla
-          explicabo facilis perferendis dicta nemo veritatis maiores magni eius
-          natus. Autem sit voluptates sequi ad fugit deleniti error! Quia, est.
-        </p>
+      <section class="main__section">
+        <div class="main__div">
+          <h1 class="main__text__title">
+            Olá! Bem-vindo(a) ao meu portifolio!
+          </h1>
+          <p class="main__text__paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nulla
+            explicabo facilis perferendis dicta nemo veritatis maiores magni
+            eius natus. Autem sit voluptates sequi ad fugit deleniti error!
+            Quia, est. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Ipsum nulla explicabo facilis perferendis dicta nemo veritatis
+            maiores magni eius natus. Autem sit voluptates sequi ad fugit
+            deleniti error! Quia, est.
+          </p>
+        </div>
+        <img
+          class="main__image"
+          src="./assets/3d_image.jpg"
+          alt="Menina sentada em livros em 3d"
+        />
       </section>
-      <img
-        class="main__image"
-        src="./assets/3d_image.jpg"
-        alt="Menina sentada em livros em 3d"
-      />
     </main>
     <footer class="footer">
       <section class="footer__images">
