--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meus projetos</title>
     <link rel="stylesheet" href="./styles/projects.css" />
+    <base target="_blank" />
   </head>
   <body>
     <header class="header">
