nav menu color update

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meus projetos</title>
     <link rel="stylesheet" href="./styles/projects.css" />
-    <base target="_blank" />
   </head>
   <body>
     <header class="header">
@@ -71,11 +70,13 @@
             <a
               href="https://portifolio-page-two.vercel.app/"
               id="primeiro-botao"
+              target="_blank"
               >Acessar projeto</a
             >
             <a
               href="https://github.com/milenaleonardi/portifolio-page"
               id="segundo-botao"
+              target="_blank"
               >Acessar código</a
             >
           </div>
